--- a/eligibility_table.qmd
+++ b/eligibility_table.qmd
@@ -75,11 +75,6 @@ execute:
 </style>
 
 
-
-
-
-
-
 ```{r setup, include=FALSE}
 #load needed libraries
 require(dplyr)
@@ -91,7 +86,6 @@ require(scales)
 require(htmlwidgets)
 require(htmltools)
 require(stringr)
-require(lubridate)
 require(tidyr)
 ```
 
@@ -449,7 +443,10 @@ tbl <- reactable(
         label_id <- paste0('label-', name)
         
         htmltools::tags$div(
-          htmltools::tags$span(id = label_id, paste0(min_val, " – ", max_val)),
+          htmltools::tags$span(
+  id = label_id,
+  paste0(format(min_val, big.mark = ","), " – ", format(max_val, big.mark = ","))
+),
           htmltools::tags$input(
             id = id_min,
             type = "range",
@@ -460,7 +457,8 @@ tbl <- reactable(
             oninput = sprintf("
               const min = parseInt(this.value);
               const max = parseInt(document.getElementById('%s').value);
-              document.getElementById('%s').innerText = min + ' – ' + max;
+              document.getElementById('%s').innerText = 
+  min.toLocaleString() + ' – ' + max.toLocaleString();
               Reactable.setFilter('school-table', '%s', { min: min, max: max });
             ", id_max, label_id, name),
             style = "width: 100%; margin-bottom: 4px;"
@@ -475,7 +473,8 @@ tbl <- reactable(
             oninput = sprintf("
               const max = parseInt(this.value);
               const min = parseInt(document.getElementById('%s').value);
-              document.getElementById('%s').innerText = min + ' – ' + max;
+              document.getElementById('%s').innerText = 
+  min.toLocaleString() + ' – ' + max.toLocaleString();
               Reactable.setFilter('school-table', '%s', { min: min, max: max });
             ", id_min, label_id, name),
             style = "width: 100%;"
@@ -766,7 +765,7 @@ title <- div(
 # ticker HTML
 ticker <- HTML(paste0('
 <div class="ticker-wrap">
-<div class="ticker-label">Enrollments since last week</div>
+<div class="ticker-label">Enrollments since last week:</div>
   <div class="ticker">
     <div class="ticker-move">
       ', ticker_items, ' ', ticker_items, '
